# renovation_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SMOKE_TEST_MULTITENANT.md  TESTING.md  USER_TESTING_GUIDE.md  alembic.ini  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml
.github/: copilot-instructions.md
Requirements/: 1 Final_Remont_Bot_Flow.docx  2 Chatbot_Remont_MVP.docx  3 Chatbot_Roles_Scheme.docx  4 Remont_Bot_Tipovye_Scenarii_Chatov.docx
deploy/: ORACLE_CLOUD_DEPLOY.md  oracle-retry.ps1  oracle-retry.sh  oracle-setup.sh
docker/: init-db.sql
src/bot/: __init__.py  __main__.py  admin_api.py  config.py
src/bot/adapters/: __init__.py  base.py
src/bot/adapters/telegram/: __init__.py  admin_handlers.py  ai_handlers.py  bot.py  budget_handlers.py  filters.py  formatters.py  fsm_states.py  group_handlers.py  handlers.py  keyboards.py  mention_gate.py  middleware.py  notification_handlers.py  project_handlers.py  project_resolver.py  report_handlers.py  role_handlers.py  stage_handlers.py
src/bot/adapters/whatsapp/: __init__.py  bot.py
src/bot/core/: __init__.py  budget_service.py  notification_service.py  project_service.py  report_service.py  role_service.py  scheduler.py  stage_service.py  stage_templates.py  states.py
src/bot/db/: __init__.py  models.py  repositories.py  session.py
src/bot/db/migrations/: env.py  (+1 more)
src/bot/services/: __init__.py  ai_client.py  chat_service.py  embedding_service.py  media_service.py  nlp_parser.py  participant_service.py  pg_cache.py  pgai_service.py  rag_service.py  skills_loader.py
(+14 files in other folders)
